20200109 - Improving mainWindow css - see #160 and the famous right gap bug

--- a/app/css/ttth/mainWindow.css
+++ b/app/css/ttth/mainWindow.css
@@ -2,13 +2,9 @@
 /* HTML/BODY/CONTAINER */
 /* ########################################################################## */
 html,body {
-    /* height */
     height:100%;
-
-    /* width */
     width: 100%;
 
-    /* padding */
     padding-right: 0;
     padding-left: 0;
 
@@ -20,15 +16,40 @@ html,body {
 /* ########################################################################## */
 /* CUSTOM TITLEBAR */
 /* ########################################################################## */
+
+/*
+    TITLEBAR
+        .titlebar
+        .window-appicon
+        .window-title
+        .window-controls-container
+        .resizer top
+        .resizer left
+    MENU
+        .menubar
+        .menubar-menu-button
+        .menubar-menu-button open
+        .menubar-menu-title
+        .action-item
+        .action-menu-item
+*/
+
 .titlebar, .titlebar > * {
     font-family: Arial;
-    /* font-size: 20px; */
     color: var(--color-navigationText);
+    font-size: 13px !important;
 }
 
 .window-title{
-    font-size: 13px !important;
+    /* font-size: 13px !important; */
 }
+
+.resizer.top{
+    /* background-color: yellow !important; */
+}
+
+
+
 
 /* ########################################################################## */
 /* MENU / NAVIGATION */
@@ -57,7 +78,6 @@ ul {
 }
 
 .nav-link:hover {
-    /* color: var(--color-highlight); */
     color: var(--color-navigationHighlight);
 }
 
@@ -74,6 +94,11 @@ ul {
     color: var(--color-navigationCurrentActive) !important;
 }
 
+.tab-content{
+    margin-left: 0px !important;
+    padding-left: 0px !important;
+}
+
 
 /* ########################################################################## */
 /* CONTENT */
@@ -83,7 +108,6 @@ ul {
     padding-right: 0px !important;
     background-color: var(--color-bodyBackground);
 }
-
 
 .fuya {
     padding-left: 0px !important;
@@ -99,14 +123,14 @@ ul {
     min-height: 100%;
 
     padding-left: 0 !important;
-    /* padding-right: 0 !important; */
+    padding-right: 0 !important;
 }
 
 .row {
-    /* ugly - attempt to fight with grid.scss  - see #60*/
-    margin-left: -15px !important;
+    margin-left: 0px !important; 
     margin-right:  0px !important;
 }
+
 
 /* ########################################################################## */
 /* SETTINGS
@@ -118,13 +142,18 @@ ul {
     border-bottom: 1px solid var(--color-inputFormsBorder) !important;
 }
 
-.ttthServiceRow {
-    margin-right:  0px !important;
-}
-
 #allSettings {
     margin-left: 10px !important;
     margin-right: 10px !important;
+}
+
+.ttthServiceRow {
+    margin-left: -15px !important;
+    /* still not perfect - but closer than before */
+    /* -12px results in horizontal scrollbar */
+    /* seems like somewhere be got 2px + 2px or 4px wasting */
+    margin-right: -11px !important; 
+    padding-right: 0px !important;
 }
 
 h3 {
@@ -134,7 +163,6 @@ h3 {
     border-bottom: 2px solid var(--color-bodyHeadingBorder);
     color: var(--color-bodyHeading);
 }
-
 
 /* ########################################################################## */
 /* CUSTOMIZE BOOTSTRAP FORM ITEMS
@@ -149,6 +177,8 @@ h3 {
     color: var(--color-inputFormsTextd) !important;
     background-color: var(--color-inputFormsBackground)!important;
     border-color: var(--color-inputFormsBorder) !important;
+
+    min-width: 35px; /* see +160 */
 }
 
 input {
@@ -181,7 +211,6 @@ input[type="checkbox"] {
     border-color: var(--color-highlight) !important;
 }
 
-
 /* ########################################################################## */
 /* CUSTOMIZE BOOTSTRAP BUTTONS
 /* ########################################################################## */
@@ -209,7 +238,6 @@ input[type="checkbox"] {
 .btn:hover {
     filter: brightness(75%);
 }
-
 
 /* ########################################################################## */
 /* CUSTOMIZE FONTAWESOME ICON COLOR
